# cpp-starter-template

./: CMakeLists.txt  README.md  env.sh  main.cpp
include/: utils.h
src/: main.cpp  utils.cpp
